intergrated 3 values in frontend and backend
