# go-api-client/src/go-client-generated/api/swagger.yaml
@@ -1168,6 +1168,8 @@ components:
             pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
             createdAt: 853113599
             nEpns: 5
+            readoutCfgUri: readoutCfgUri
+            pdpWorkflowParameters: pdpWorkflowParameters
             timeO2Start: 853113599
             environmentId: environmentId
             dcs: false
@@ -1178,6 +1180,7 @@ components:
             epn: false
             lhcPeriod: lhcPeriod
             timeTrgStart: 853113599
+            pdpBeamType: pdpBeamType
             pdpConfigOption: pdpConfigOption
             nSubtimeframes: 2
             runQuality: good
@@ -1195,6 +1198,8 @@ components:
             pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
             createdAt: 853113599
             nEpns: 5
+            readoutCfgUri: readoutCfgUri
+            pdpWorkflowParameters: pdpWorkflowParameters
             timeO2Start: 853113599
             environmentId: environmentId
             dcs: false
@@ -1205,6 +1210,7 @@ components:
             epn: false
             lhcPeriod: lhcPeriod
             timeTrgStart: 853113599
+            pdpBeamType: pdpBeamType
             pdpConfigOption: pdpConfigOption
             nSubtimeframes: 2
             runQuality: good
@@ -1229,6 +1235,8 @@ components:
             pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
             createdAt: 853113599
             nEpns: 5
+            readoutCfgUri: readoutCfgUri
+            pdpWorkflowParameters: pdpWorkflowParameters
             timeO2Start: 853113599
             environmentId: environmentId
             dcs: false
@@ -1239,6 +1247,7 @@ components:
             epn: false
             lhcPeriod: lhcPeriod
             timeTrgStart: 853113599
+            pdpBeamType: pdpBeamType
             pdpConfigOption: pdpConfigOption
             nSubtimeframes: 2
             runQuality: good
@@ -1256,6 +1265,8 @@ components:
             pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
             createdAt: 853113599
             nEpns: 5
+            readoutCfgUri: readoutCfgUri
+            pdpWorkflowParameters: pdpWorkflowParameters
             timeO2Start: 853113599
             environmentId: environmentId
             dcs: false
@@ -1266,6 +1277,7 @@ components:
             epn: false
             lhcPeriod: lhcPeriod
             timeTrgStart: 853113599
+            pdpBeamType: pdpBeamType
             pdpConfigOption: pdpConfigOption
             nSubtimeframes: 2
             runQuality: good
@@ -1552,6 +1564,8 @@ components:
           pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
           createdAt: 853113599
           nEpns: 5
+          readoutCfgUri: readoutCfgUri
+          pdpWorkflowParameters: pdpWorkflowParameters
           timeO2Start: 853113599
           environmentId: environmentId
           dcs: false
@@ -1562,6 +1576,7 @@ components:
           epn: false
           lhcPeriod: lhcPeriod
           timeTrgStart: 853113599
+          pdpBeamType: pdpBeamType
           pdpConfigOption: pdpConfigOption
           nSubtimeframes: 2
           runQuality: good
@@ -1579,6 +1594,8 @@ components:
           pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
           createdAt: 853113599
           nEpns: 5
+          readoutCfgUri: readoutCfgUri
+          pdpWorkflowParameters: pdpWorkflowParameters
           timeO2Start: 853113599
           environmentId: environmentId
           dcs: false
@@ -1589,6 +1606,7 @@ components:
           epn: false
           lhcPeriod: lhcPeriod
           timeTrgStart: 853113599
+          pdpBeamType: pdpBeamType
           pdpConfigOption: pdpConfigOption
           nSubtimeframes: 2
           runQuality: good
@@ -1927,6 +1945,8 @@ components:
           pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
           createdAt: 853113599
           nEpns: 5
+          readoutCfgUri: readoutCfgUri
+          pdpWorkflowParameters: pdpWorkflowParameters
           timeO2Start: 853113599
           environmentId: environmentId
           dcs: false
@@ -1937,6 +1957,7 @@ components:
           epn: false
           lhcPeriod: lhcPeriod
           timeTrgStart: 853113599
+          pdpBeamType: pdpBeamType
           pdpConfigOption: pdpConfigOption
           nSubtimeframes: 2
           runQuality: good
@@ -1954,6 +1975,8 @@ components:
           pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
           createdAt: 853113599
           nEpns: 5
+          readoutCfgUri: readoutCfgUri
+          pdpWorkflowParameters: pdpWorkflowParameters
           timeO2Start: 853113599
           environmentId: environmentId
           dcs: false
@@ -1964,6 +1987,7 @@ components:
           epn: false
           lhcPeriod: lhcPeriod
           timeTrgStart: 853113599
+          pdpBeamType: pdpBeamType
           pdpConfigOption: pdpConfigOption
           nSubtimeframes: 2
           runQuality: good
@@ -2006,6 +2030,8 @@ components:
             pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
             createdAt: 853113599
             nEpns: 5
+            readoutCfgUri: readoutCfgUri
+            pdpWorkflowParameters: pdpWorkflowParameters
             timeO2Start: 853113599
             environmentId: environmentId
             dcs: false
@@ -2016,6 +2042,7 @@ components:
             epn: false
             lhcPeriod: lhcPeriod
             timeTrgStart: 853113599
+            pdpBeamType: pdpBeamType
             pdpConfigOption: pdpConfigOption
             nSubtimeframes: 2
             runQuality: good
@@ -2033,6 +2060,8 @@ components:
             pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
             createdAt: 853113599
             nEpns: 5
+            readoutCfgUri: readoutCfgUri
+            pdpWorkflowParameters: pdpWorkflowParameters
             timeO2Start: 853113599
             environmentId: environmentId
             dcs: false
@@ -2043,6 +2072,7 @@ components:
             epn: false
             lhcPeriod: lhcPeriod
             timeTrgStart: 853113599
+            pdpBeamType: pdpBeamType
             pdpConfigOption: pdpConfigOption
             nSubtimeframes: 2
             runQuality: good
@@ -2791,6 +2821,15 @@ components:
         pdpTopologyDescriptionLibraryFile:
           type: string
           description: Library file location of the pdp topology descrption.
+        pdpWorkflowParameters:
+          type: string
+          description: Parameters given to the pdp workflow.
+        pdpBeamType:
+          type: string
+          description: Beam type of the pdp
+        readoutCfgUri:
+          type: string
+          description: Config uri of readout.
         runNumber:
           $ref: '#/components/schemas/RunNumber'
         runQuality:
@@ -2850,6 +2889,8 @@ components:
         pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
         createdAt: 853113599
         nEpns: 5
+        readoutCfgUri: readoutCfgUri
+        pdpWorkflowParameters: pdpWorkflowParameters
         timeO2Start: 853113599
         environmentId: environmentId
         dcs: false
@@ -2860,6 +2901,7 @@ components:
         epn: false
         lhcPeriod: lhcPeriod
         timeTrgStart: 853113599
+        pdpBeamType: pdpBeamType
         pdpConfigOption: pdpConfigOption
         nSubtimeframes: 2
         runQuality: good
@@ -2934,6 +2976,8 @@ components:
           pdpTopologyDescriptionLibraryFile: pdpTopologyDescriptionLibraryFile
           createdAt: 853113599
           nEpns: 5
+          readoutCfgUri: readoutCfgUri
+          pdpWorkflowParameters: pdpWorkflowParameters
           timeO2Start: 853113599
           environmentId: environmentId
           dcs: false
@@ -2944,6 +2988,7 @@ components:
           epn: false
           lhcPeriod: lhcPeriod
           timeTrgStart: 853113599
+          pdpBeamType: pdpBeamType
           pdpConfigOption: pdpConfigOption
           nSubtimeframes: 2
           runQuality: good
