# lib/domain/dtos/EndRunDto.js
@@ -26,6 +26,9 @@ const BodyDto = Joi.object({
     runQuality: Joi.string().valid('good', 'bad', 'test').optional(),
     lhcPeriod: Joi.string().optional(),
     odcTopologyFullName: Joi.string().optional(),
+    pdpWorkflowParameters: Joi.string().optional(),
+    pdpBeamType: Joi.string().optional(),
+    readoutCfgUri: Joi.string().optional(),
 });
 
 const QueryDto = Joi.object({
