# lib/domain/dtos/StartRunDto.js
@@ -46,6 +46,9 @@ const BodyDto = Joi.object({
     epnTopology: Joi.string(),
     detectors: detectorsDto.detectorList(),
     odcTopologyFullName: Joi.string().optional(),
+    pdpWorkflowParameters: Joi.string().optional(),
+    pdpBeamType: Joi.string().optional(),
+    readoutCfgUri: Joi.string().optional(),
 });
 
 const QueryDto = Joi.object({
